--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
   <section id="mint" class="mint-section wf-section">
-    <div class="minting-container w-container"><img src="images/reel.gif" loading="lazy" width="240" alt class="mint-card-image">
+    <div class="minting-container w-container"><img src="/Small gola/ezgif.com-gif-maker (2).gif" loading="lazy" width="240" alt class="mint-card-image">
       <h2 style="color:rgb(90, 128, 0)"></h3style>Mint your Own STASH</h2>
       <h3>Bored of your NORMAL LIFE??</h3>
       <h2>	
